5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1721_3035.log
== TEST (2019-05-02 19:25:22) 
-- CODE:
a=input("escreva um numero")
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:25:33) 
-- CODE:
a=input("escreva um numero")
if (a>0):
-- ERROR:
File "XXXX", line 3
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:25:41) 
-- CODE:
a=input("escreva um numero")
 if (a>0):
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:25:43) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:45) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
		
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:26:46) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
		
-- EXECUTION TIME:
0.159883
-- ERROR:
  File "/home/codebench/codes/1721/3035/main.py", line 2
    if (a>0):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:46) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
		
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:46) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
		
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:46) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
		
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:46) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
		
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:46) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
		
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:56) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:57) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:57) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:57) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:58) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:58) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:58) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:58) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:58) 
-- CODE:
a=input("escreva um numero")
  if (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    if (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:27:03) 
-- CODE:
a=input("escreva um numero")
  If (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    If (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:27:04) 
-- CODE:
a=input("escreva um numero")
  If (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    If (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:27:05) 
-- CODE:
a=input("escreva um numero")
  If (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    If (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:27:05) 
-- CODE:
a=input("escreva um numero")
  If (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    If (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:27:06) 
-- CODE:
a=input("escreva um numero")
  If (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    If (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:27:06) 
-- CODE:
a=input("escreva um numero")
  If (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    If (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:27:06) 
-- CODE:
a=input("escreva um numero")
  If (a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    If (a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:27:10) 
-- CODE:
a=input("escreva um numero")
  If=(a>0):
	 msg=dasd
-- ERROR:
File "XXXX", line 2
    If=(a>0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
